--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
         Project requests are free, i don't really care about money for now
         but you can support me on my BTC Wallet : <br><br>
-        <code>bc1qz7jek4ymq3xqkg5hpuk8x80pcewzymtyr44ezg </code>
+        <code id="btc">bc1qz7jek4ymq3xqkg5hpuk8x80pcewzymtyr44ezg </code>
         <br>
         <h2>How to request a project ?</h2>
         
