--- a/flux/index.html
+++ b/flux/index.html
@@ -58,7 +58,7 @@ A Social media and communities app</div>
 
     </div>
 
-  <script src="scripskkst.js"></script>
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   </body>
 
