--- a/flux/index.html
+++ b/flux/index.html
@@ -33,7 +33,7 @@
       </div>
 
     </div>
-
+    <div id="particles-js">
     <div class="bodies">
 
       <div class="mockup">
@@ -57,9 +57,9 @@ A Social media and communities app</div>
       </div>
 
     </div>
+    </div>
 
-  <script src="script.js"></script>
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="particles.js"></script>
   </body>
 
 </html>
