--- a/flux/index.html
+++ b/flux/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="description">Welcome to Flux!
-A Social media and communities app</div>
+A Social media and communities app 2</div>
 
       <div>
         <button id="download" class="fluxbtn" onclick="downloadOnClick()">Download</button>
